# tfga

./: .buildinfo  .gitignore  CNAME  Earthfile  LICENSE  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py  tfga.html
.github/workflows/: build-test-publish.yml  docs.yml  earthly.yml  publish-to-pypi.yml  publish.yml  test.yml
_build/: modules.html  tfga.html
_modules/: index.html
_modules/tfga/: blades.html  cayley.html  layers.html  mv.html  mv_ops.html  tfga.html
_sources/: index.rst.txt  tfga.rst.txt
_sources/_build/: modules.rst.txt  tfga.rst.txt
benchmarks/: README.md  generate.py  graph.py  test_clifford.py  test_tfga.py
docs/: conf.py  index.rst
notebooks/: conv.ipynb  em.ipynb  keras-triangles.ipynb  pga.ipynb  qed.ipynb  tfga.ipynb
notebooks/em_output/: electric_field.webm  electric_potential.webm
tests/: test_autodiff.py  test_dual_cayley.py  test_dual_ga.py  test_keras.py  test_mv_ops.py  test_pga.py  test_sta_cayley.py
tfga/: __init__.py  blades.py  cayley.py  layers.py  mv.py  mv_ops.py  tfga.py
